@@ -9,4 +9,6 @@ Changelog
 - Removed `find_quadrants_tan` as it was a duplicate of `find_quadrants`
 - Renamed `mid(a, α)` -> `scaled_mid(a, α)`
 - Functions returning intervals based on bound type now required a flavor type as parameter
-- Rename `entireinterval` -> `RR`
+- Renamed `entireinterval` -> `RR`
+- Added check of the "IA_DEFAULT_FLAVOR" and "IA_DEFAULT_BOUND_TYPE" keys in `ENV` to get the flavor (`Interval`) and bound type (`DefaultBound`). The default interval type is thus `Interval{DefaultBound}`.
+- Replaced `interval` (checked interval construction) by `Interval{T}(a, b; check=false)`.
